remove unused library

--- a/CriptoAnalysis.ipynb
+++ b/CriptoAnalysis.ipynb
@@ -3,79 +3,77 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "import os \n",
-    "\n",
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "import mplfinance as mpf\n",
-    "import seaborn as sns\n",
-    "import datetime as dt\n",
-    "\n",
-    "from seaborn.matrix import heatmap\n"
-   ]
+    "import os \r\n",
+    "\r\n",
+    "import pandas as pd\r\n",
+    "import matplotlib.pyplot as plt\r\n",
+    "\r\n",
+    "import seaborn as sns\r\n",
+    "import datetime as dt\r\n",
+    "\r\n",
+    "from seaborn.matrix import heatmap\r\n"
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "moneda  = \"USD\"\n",
+    "moneda  = \"USD\"\r\n",
     "metric = \"Close\""
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "'''Data Prep'''"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "cripto = []"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "#Parseamos el repertorio por csv de cripto\n",
-    "\n"
-   ]
+    "#Parseamos el repertorio por csv de cripto\r\n",
+    "\r\n"
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "#Parseamos el repertorio por csv de cripto\n",
-    "directory = f\"Ficheros Originales\"+os.sep\n",
-    "for fichero in os.listdir(directory):\n",
-    "    if fichero.endswith(f\"{moneda}.csv\"):\n",
-    "        cripto.append( fichero.split('-')[0])\n",
-    "    else:\n",
-    "        continue\n"
-   ]
+    "#Parseamos el repertorio por csv de cripto\r\n",
+    "directory = f\"Ficheros Originales\"+os.sep\r\n",
+    "for fichero in os.listdir(directory):\r\n",
+    "    if fichero.endswith(f\"{moneda}.csv\"):\r\n",
+    "        cripto.append( fichero.split('-')[0])\r\n",
+    "    else:\r\n",
+    "        continue\r\n"
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": []
+   "source": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "print(f\"Tabla de Cripto {cripto}\")\n",
     "\n",
@@ -97,104 +95,106 @@
     "        colnames.append(ticker)\n",
     "        combined.columns = colnames  \n",
     "\n"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": []
+   "source": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "plt.yscale('log')\n",
-    "\n",
-    "mitad = len(cripto)//2\n",
-    "\n",
-    "\n",
-    "plt.subplot(2,1,1)\n",
-    "for ticker in cripto[mitad:]:\n",
-    "    plt.plot(combined[ticker], label=ticker)\n",
-    "    plt.legend(loc=\"upper left\")\n",
-    "plt.yscale('log')\n"
-   ]
+    "plt.yscale('log')\r\n",
+    "\r\n",
+    "mitad = len(cripto)//2\r\n",
+    "\r\n",
+    "\r\n",
+    "plt.subplot(2,1,1)\r\n",
+    "for ticker in cripto[mitad:]:\r\n",
+    "    plt.plot(combined[ticker], label=ticker)\r\n",
+    "    plt.legend(loc=\"upper left\")\r\n",
+    "plt.yscale('log')\r\n"
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": []
+   "source": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "plt.subplot(2,1,2 )\n",
-    "for ticker in cripto[:mitad]:\n",
-    "    plt.plot(combined[ticker], label=ticker)\n",
-    "    plt.legend(loc=\"upper left\")\n",
-    "plt.yscale('log')\n",
-    "\n",
+    "plt.subplot(2,1,2 )\r\n",
+    "for ticker in cripto[:mitad]:\r\n",
+    "    plt.plot(combined[ticker], label=ticker)\r\n",
+    "    plt.legend(loc=\"upper left\")\r\n",
+    "plt.yscale('log')\r\n",
+    "\r\n",
     "plt.show()"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "'''Calculate Correlation'''\n"
-   ]
+    "'''Calculate Correlation'''\r\n"
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "combined =  combined.pct_change().corr(method=\"pearson\") #linear correlation \n"
-   ]
+    "combined =  combined.pct_change().corr(method=\"pearson\") #linear correlation \r\n"
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "#### Referencia  :  https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.corr.html Comprobar otros algoritmo \n",
-    "''' Probando algoritmo de correlaciones\n",
-    "combined =  combined.pct_change().corr(method=\"kendall\") # ordinal/rank correlation \n",
-    "        ##Referencia  : https://en.wikipedia.org/wiki/Kendall_rank_correlation_coefficient\n",
-    "combined =  combined.pct_change().corr(method=\"spearman\") # strictly monotone\n",
-    "        ##Referncia  : https://en.wikipedia.org/wiki/Spearman%27s_rank_correlation_coefficient\n",
+    "#### Referencia  :  https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.corr.html Comprobar otros algoritmo \r\n",
+    "''' Probando algoritmo de correlaciones\r\n",
+    "combined =  combined.pct_change().corr(method=\"kendall\") # ordinal/rank correlation \r\n",
+    "        ##Referencia  : https://en.wikipedia.org/wiki/Kendall_rank_correlation_coefficient\r\n",
+    "combined =  combined.pct_change().corr(method=\"spearman\") # strictly monotone\r\n",
+    "        ##Referncia  : https://en.wikipedia.org/wiki/Spearman%27s_rank_correlation_coefficient\r\n",
     "'''"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "sns.heatmap(combined , annot=True, cmap=\"coolwarm\", annot_kws={\"size\":6})\n"
-   ]
+    "sns.heatmap(combined , annot=True, cmap=\"coolwarm\", annot_kws={\"size\":6})\r\n"
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "## El heatmap enseña la correlación con colores entre las monedas, predomina el azul entonces sin correlaciones notable\n"
-   ]
+    "## El heatmap enseña la correlación con colores entre las monedas, predomina el azul entonces sin correlaciones notable\r\n"
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "plt.show()"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   }
  ],
  "metadata": {
